--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,12 @@
     <meta name="author" content="">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"
           rel="stylesheet">
+
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.cookie.js') }}"></script>
+
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 </head>
 
@@ -19,11 +21,11 @@
 
 <div class="container">
     <div class="header">
-        <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Collection</a></li>
-            <li><a href="#">Upload</a></li>
-        </ul>
+{#        <ul class="nav nav-pills pull-right">#}
+{#            <li class="active"><a href="#">Home</a></li>#}
+{#            <li><a href="#">Collection</a></li>#}
+{#            <li><a href="#">Upload</a></li>#}
+{#        </ul>#}
         <h3 class="text-muted">vSphere Data Collection</h3>
     </div>
 
@@ -31,10 +33,11 @@
     {% block content %}
     {% endblock %}
 
-    <div class="footer">
-        <p>vSphere Data Collection Appliance</p>
+    <div class="row">
+        <div class="footer">
+            <p>vSphere Data Collection Appliance</p>
+        </div>
     </div>
-
 </div>
 
 
