--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
         <p class="lead">Allowing Collection of Performance and Configuration Data from vSphere 5.x environments</p>
 
-        <p><a class="btn btn-lg btn-success" href="/collection" role="button">Get Started</a></p>
+        <p><a class="btn btn-lg btn-success" href="/configuration" role="button">Get Started</a></p>
     </div>
 
 {% endblock %}
