--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,14 @@
 
 <div class="container">
     <div class="header">
-{#        <ul class="nav nav-pills pull-right">#}
-{#            <li class="active"><a href="#">Home</a></li>#}
-{#            <li><a href="#">Collection</a></li>#}
-{#            <li><a href="#">Upload</a></li>#}
-{#        </ul>#}
+        <ul class="nav nav-pills pull-right">
+            <li><a href="/">Home</a></li>
+            <li><a href="/configuration">Configuration</a></li>
+            <li><a href="/inventory">Inventory</a></li>
+            <li><a href="/runperf/VirtualMachine">Performance</a></li>
+            <li><a href="/status">Status</a></li>
+            <li><a href="#">Upload</a></li>
+        </ul>
         <h3 class="text-muted">vSphere Data Collection</h3>
     </div>
 
@@ -33,11 +36,7 @@
     {% block content %}
     {% endblock %}
 
-    <div class="row">
-        <div class="footer">
-            <p>vSphere Data Collection Appliance</p>
-        </div>
-    </div>
+
 </div>
 
 
