Removed Redis Dependency

--- a/templates/status.html
+++ b/templates/status.html
@@ -24,6 +24,7 @@
     <ul>
         <li>{{ datafile_name }}: {{ datafile_size }} (Estimate = {{ perf_estimate }})</li>
         <li>{{ inventory_name }}: {{ inventory_size }}</li>
+        <li>{{ debug_name }}: {{ debug_size }}</li>
     </ul>
         <p><a class="btn btn-lg btn-success" href="javascript:location.reload();" role="button">Reload</a></p>
     </div>
